--- a/scss/shared/_markdown-container.scss
+++ b/scss/shared/_markdown-container.scss
@@ -1,3 +1,4 @@
-.markdown-source-view, .markdown-reading-view {
+/* Compatibility with ITS theme/snippets */
+.markdown-source-view > div, .markdown-preview-view {
     container: markdown-view / size;
 }
