--- a/css/editor/aside.css
+++ b/css/editor/aside.css
@@ -1,4 +1,5 @@
-.markdown-source-view, .markdown-reading-view {
+/* Compatibility with ITS theme/snippets */
+.markdown-source-view > div, .markdown-preview-view {
   container: markdown-view/size;
 }
 
@@ -28,7 +29,7 @@
   clear: right;
 }
 
-@container markdown-view (width > 1000px) {
+@container markdown-view (width > 1100px) {
   .markdown-preview-view aside,
   .is-readable-line-width.markdown-preview-view .aside-right,
   .is-readable-line-width.markdown-preview-view .aside-left {
