--- a/css/editor/callouts/callout-autopsy.css
+++ b/css/editor/callouts/callout-autopsy.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
-.markdown-source-view, .markdown-reading-view {
+/* Compatibility with ITS theme/snippets */
+.markdown-source-view > div, .markdown-preview-view {
   container: markdown-view/size;
 }
 
