--- a/css/editor/callouts/callout-grid.css
+++ b/css/editor/callouts/callout-grid.css
@@ -1,4 +1,5 @@
-.markdown-source-view, .markdown-reading-view {
+/* Compatibility with ITS theme/snippets */
+.markdown-source-view > div, .markdown-preview-view {
   container: markdown-view/size;
 }
 
