--- a/scss/cssclasses/_banner.scss
+++ b/scss/cssclasses/_banner.scss
@@ -8,7 +8,7 @@ body {
     --banner-slope-angle: 4deg;
     --banner-slope-border-width: 5px;
     --banner-slope-border-color: var(--color-accent);
-    --banner-width: 100cqw;
+    --banner-width: calc(100cqw + 2 * var(--file-margins));
 }
 
 .markdown-preview-view.banner {
