Container inline-size

--- a/css/editor/callouts/callout-grid.css
+++ b/css/editor/callouts/callout-grid.css
@@ -1,6 +1,6 @@
 /* Compatibility with ITS theme/snippets */
 .markdown-source-view > div, .markdown-preview-view {
-  container: markdown-view/size;
+  container: markdown-view/inline-size;
 }
 
 .callout[data-callout=grid] {
