--- a/postcss/cssclasses/newspaper.css
+++ b/postcss/cssclasses/newspaper.css
@@ -13,8 +13,9 @@ body {
   --workleaves-foreground: var(--text-normal);
 }
 
-.markdown-source-view, .markdown-reading-view {
-  container: markdown-view/size;
+/* Compatibility with ITS theme/snippets */
+.markdown-source-view > div, .markdown-preview-view {
+  container: markdown-view/inline-size;
 }
 
 .newspaper {
@@ -68,7 +69,7 @@ body {
   margin-left: calc(50% - 50cqw - var(--file-margins));
 }
 
-@container markdown-view style(--metadata-display-reading: block) {
+@container style(--metadata-display-reading: block) {
   :is(.newspaper.show-properties.markdown-preview-view .mod-header)::after {
     content: "";
     display: block;
@@ -76,8 +77,11 @@ body {
     width: calc(100cqw + 2 * var(--file-margins));
     margin-left: calc(50% - 50cqw - var(--file-margins));
   }
+  :is(.newspaper.show-properties.markdown-preview-view .mod-header) {
+    margin-bottom: var(--p-spacing);
+  }
 }
-@container markdown-view style(--metadata-display-editing: block) {
+@container style(--metadata-display-editing: block) {
   :is(.newspaper.show-properties.markdown-source-view .cm-contentContainer)::before {
     content: "";
     position: absolute;
