--- a/scss/shared/_markdown-container.scss
+++ b/scss/shared/_markdown-container.scss
@@ -1,4 +1,4 @@
 /* Compatibility with ITS theme/snippets */
 .markdown-source-view > div, .markdown-preview-view {
-    container: markdown-view / size;
+    container: markdown-view / inline-size;
 }
