--- a/css/cssclasses/columns.css
+++ b/css/cssclasses/columns.css
@@ -1,6 +1,6 @@
 /* Compatibility with ITS theme/snippets */
 .markdown-source-view > div, .markdown-preview-view {
-  container: markdown-view/size;
+  container: markdown-view/inline-size;
 }
 
 .columns-2.markdown-preview-view .markdown-preview-section {
