--- a/css/cssclasses/newspaper.css
+++ b/css/cssclasses/newspaper.css
@@ -15,7 +15,7 @@ body {
 
 /* Compatibility with ITS theme/snippets */
 .markdown-source-view > div, .markdown-preview-view {
-  container: markdown-view/size;
+  container: markdown-view/inline-size;
 }
 
 .newspaper {
