--- a/css/editor/callouts/callout-autopsy.css
+++ b/css/editor/callouts/callout-autopsy.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* Compatibility with ITS theme/snippets */
 .markdown-source-view > div, .markdown-preview-view {
-  container: markdown-view/size;
+  container: markdown-view/inline-size;
 }
 
 .callout[data-callout=autopsy] {
