--- a/css/editor/embeds/audio-cassette.css
+++ b/css/editor/embeds/audio-cassette.css
@@ -8,7 +8,7 @@
 
 /* Compatibility with ITS theme/snippets */
 .markdown-source-view > div, .markdown-preview-view {
-  container: markdown-view/size;
+  container: markdown-view/inline-size;
 }
 
 .media-embed[alt*=cassette] {
