--- a/css/editor/embeds/embed-wide.css
+++ b/css/editor/embeds/embed-wide.css
@@ -1,6 +1,6 @@
 /* Compatibility with ITS theme/snippets */
 .markdown-source-view > div, .markdown-preview-view {
-  container: markdown-view/size;
+  container: markdown-view/inline-size;
 }
 
 .markdown-preview-view [alt~=wide]:is(img, .markdown-embed, .file-embed) {
