--- a/postcss/cssclasses/columns.css
+++ b/postcss/cssclasses/columns.css
@@ -1,5 +1,6 @@
-.markdown-source-view, .markdown-reading-view {
-  container: markdown-view/size;
+/* Compatibility with ITS theme/snippets */
+.markdown-source-view > div, .markdown-preview-view {
+  container: markdown-view/inline-size;
 }
 
 .columns-2.markdown-preview-view .markdown-preview-section {
