--- a/postcss/editor/callouts/callout-grid.css
+++ b/postcss/editor/callouts/callout-grid.css
@@ -1,5 +1,6 @@
-.markdown-source-view, .markdown-reading-view {
-  container: markdown-view/size;
+/* Compatibility with ITS theme/snippets */
+.markdown-source-view > div, .markdown-preview-view {
+  container: markdown-view/inline-size;
 }
 
 .callout[data-callout=grid] {
