--- a/postcss/editor/code/code-poem.css
+++ b/postcss/editor/code/code-poem.css
@@ -3,10 +3,6 @@ body {
   --workleaves-foreground: var(--text-normal);
 }
 
-.markdown-source-view, .markdown-reading-view {
-  container: markdown-view/size;
-}
-
 pre.language-poem,
 pre.language-poem-frame,
 pre.language-poem-floral {
@@ -89,39 +85,30 @@ pre.language-poem-floral > code {
   background-color: var(--workleaves-background);
   padding: var(--size-4-3);
 }
-pre.language-poem-floral:not(.is-collapsed)::before {
+pre.language-poem-floral:not(.is-collapsed)::before, pre.language-poem-floral:not(.is-collapsed)::after {
   content: "";
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 0;
-  width: var(--floral-width);
   height: unset;
   background-color: rgba(var(--poem-color), 0.6);
   -webkit-mask-image: var(--left-ornament-flourish), linear-gradient(to left, transparent, black 40%);
-  -webkit-mask-composite: intersect;
-  -webkit-mask-position: left bottom;
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-size: 100% auto;
+  mask-composite: intersect;
   z-index: -1;
 }
+pre.language-poem-floral:not(.is-collapsed)::before {
+  left: 0;
+  width: var(--floral-width);
+  -webkit-mask-position: left bottom;
+}
 pre.language-poem-floral:not(.is-collapsed)::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
   right: 0;
   width: var(--floral-width);
   left: unset;
-  height: unset;
-  background-color: rgba(var(--poem-color), 0.6);
-  -webkit-mask-image: var(--left-ornament-flourish), linear-gradient(to left, transparent, black 100%);
   opacity: 0.2;
-  -webkit-mask-composite: intersect;
   -webkit-mask-position: right bottom;
-  -webkit-mask-repeat: no-repeat;
-  -webkit-mask-size: 100% auto;
-  z-index: -1;
   transform: scaleX(-1) scaleY(-1);
 }
 pre.language-poem-floral.is-collapsed::before, pre.language-poem-floral.is-collapsed::after {
