--- a/postcss/editor/embeds/audio-cassette.css
+++ b/postcss/editor/embeds/audio-cassette.css
@@ -6,8 +6,9 @@
   --shadow-color: rgba(0, 0, 0, 0.3);
 }
 
-.markdown-source-view, .markdown-reading-view {
-  container: markdown-view/size;
+/* Compatibility with ITS theme/snippets */
+.markdown-source-view > div, .markdown-preview-view {
+  container: markdown-view/inline-size;
 }
 
 .media-embed[alt*=cassette] {
