--- a/postcss/plugins/community/dataview/dataview-wide.css
+++ b/postcss/plugins/community/dataview/dataview-wide.css
@@ -1,5 +1,6 @@
-.markdown-source-view, .markdown-reading-view {
-  container: markdown-view/size;
+/* Compatibility with ITS theme/snippets */
+.markdown-source-view > div, .markdown-preview-view {
+  container: markdown-view/inline-size;
 }
 
 .block-language-dataviewjs:has(.dataview-wide) {
@@ -8,7 +9,7 @@
 
 .markdown-reading-view .dataview-wide {
   position: relative;
-  --w: 95cqw;
+  --w: calc(0.95 * (100cqw + 2 * var(--file-margins)));
   width: var(--w);
   left: calc(50% - var(--w) * 0.5);
 }
