--- a/css/editor/headings/h1-display.css
+++ b/css/editor/headings/h1-display.css
@@ -65,6 +65,7 @@ body {
   position: relative;
   padding: var(--cutout-outline-inset);
   clip-path: polygon(0 var(--cutout-corner-angle), var(--cutout-corner-angle) 0, calc(100% - var(--cutout-corner-angle)) 0, 100% var(--cutout-corner-angle), 100% calc(100% - var(--cutout-corner-angle)), calc(100% - var(--cutout-corner-angle)) 100%, var(--cutout-corner-angle) 100%, 0 calc(100% - var(--cutout-corner-angle)));
+  overflow: hidden; /* Creates a Block Formatting Context (BFC) to avoid going over the float elements */
 }
 .fas-h1-display .markdown-preview-view:not(:is(.newspaper, .movie-script, .minimalist, .h1-stroke, .h1-normal, .sci-fi)) h1:not(.callout h1, ul h1, ol h1)::before,
 .markdown-preview-view.h1-display h1:not(.callout h1, ul h1, ol h1)::before {
