--- a/scss/editor/callouts/_callout-masonry.scss
+++ b/scss/editor/callouts/_callout-masonry.scss
@@ -50,9 +50,8 @@
         object-fit: cover;
     }
 
-    > .callout-content > p > *:last-child img {
-        object-fit: contain;
-        object-position: left center;
+    > .callout-content > p > *:last-child {
+        flex-grow: unset;
     }
 
     br {
