--- a/postcss/plugins/core/file-explorer-rainbow.css
+++ b/postcss/plugins/core/file-explorer-rainbow.css
@@ -43,3 +43,69 @@
   --color-rainbow-10: hsl(324, 100%, 83%);
   --color-rainbow-10-rgb: 255, 168, 220;
 }
+
+body {
+  --fas-rainbow-folders: true;
+}
+
+@container style(--fas-rainbow-folders: true) {
+  .nav-folder-children > .nav-folder:nth-child(10n+2),
+  .nav-files-container > div > .nav-folder:nth-child(10n+2),
+  [data-type=bookmarks] .tree-item:nth-child(10n+2) {
+    --folder-color: var(--color-rainbow-1);
+  }
+  .nav-folder-children > .nav-folder:nth-child(10n+3),
+  .nav-files-container > div > .nav-folder:nth-child(10n+3),
+  [data-type=bookmarks] .tree-item:nth-child(10n+3) {
+    --folder-color: var(--color-rainbow-2);
+  }
+  .nav-folder-children > .nav-folder:nth-child(10n+4),
+  .nav-files-container > div > .nav-folder:nth-child(10n+4),
+  [data-type=bookmarks] .tree-item:nth-child(10n+4) {
+    --folder-color: var(--color-rainbow-3);
+  }
+  .nav-folder-children > .nav-folder:nth-child(10n+5),
+  .nav-files-container > div > .nav-folder:nth-child(10n+5),
+  [data-type=bookmarks] .tree-item:nth-child(10n+5) {
+    --folder-color: var(--color-rainbow-4);
+  }
+  .nav-folder-children > .nav-folder:nth-child(10n+6),
+  .nav-files-container > div > .nav-folder:nth-child(10n+6),
+  [data-type=bookmarks] .tree-item:nth-child(10n+6) {
+    --folder-color: var(--color-rainbow-5);
+  }
+  .nav-folder-children > .nav-folder:nth-child(10n+7),
+  .nav-files-container > div > .nav-folder:nth-child(10n+7),
+  [data-type=bookmarks] .tree-item:nth-child(10n+7) {
+    --folder-color: var(--color-rainbow-6);
+  }
+  .nav-folder-children > .nav-folder:nth-child(10n+8),
+  .nav-files-container > div > .nav-folder:nth-child(10n+8),
+  [data-type=bookmarks] .tree-item:nth-child(10n+8) {
+    --folder-color: var(--color-rainbow-7);
+  }
+  .nav-folder-children > .nav-folder:nth-child(10n+9),
+  .nav-files-container > div > .nav-folder:nth-child(10n+9),
+  [data-type=bookmarks] .tree-item:nth-child(10n+9) {
+    --folder-color: var(--color-rainbow-8);
+  }
+  .nav-folder-children > .nav-folder:nth-child(10n+10),
+  .nav-files-container > div > .nav-folder:nth-child(10n+10),
+  [data-type=bookmarks] .tree-item:nth-child(10n+10) {
+    --folder-color: var(--color-rainbow-9);
+  }
+  .nav-folder-children > .nav-folder:nth-child(10n+1),
+  .nav-files-container > div > .nav-folder:nth-child(10n+1),
+  [data-type=bookmarks] .tree-item:nth-child(10n+1) {
+    --folder-color: var(--color-rainbow-10);
+  }
+  .nav-files-container .nav-folder.nav-folder .nav-folder,
+  [data-type=bookmarks] .tree-item .tree-item {
+    --folder-color: inherit;
+  }
+  .nav-files-container > div > .nav-folder .nav-folder-title,
+  [data-type=bookmarks] .tree-item {
+    --nav-item-color: var(--folder-color);
+    --nav-item-background-hover: rgb(from var(--folder-color) r g b / 0.2);
+  }
+}
