--- a/scss/editor/lists/tasks/_tasks-variables.scss
+++ b/scss/editor/lists/tasks/_tasks-variables.scss
@@ -1,4 +1,4 @@
 body {
-    --checkbox-style: doodle;
-    --alternative-checkboxes: doodle;
+    --fas-checkbox-style: doodle;
+    --fas-alternative-checkboxes: doodle;
 }
