--- a/scss/editor/callouts/_callout-fas-infobox.scss
+++ b/scss/editor/callouts/_callout-fas-infobox.scss
@@ -90,6 +90,7 @@
         object-fit: cover;
         border-radius: 20%;
         border: 2px solid rgb(var(--callout-color));
+        background-color: var(--workleaves-background, var(--background-primary));
     }
     img[alt*="icon"]:not(.image-embed img) {
         position: absolute;
@@ -135,6 +136,15 @@
 }
 
 /* h1 ribbon */
+:is(.fas-h1-stroke, .h1-stroke) .callout[data-callout="fas-infobox"] {
+    h1 {
+        display: block;
+    }
+    h1::before, h1::after {
+        background: none;
+        height: unset;
+    }
+}
 .callout[data-callout="fas-infobox"] {
     --overflow-width: 10px;
     --h1-line-height: 1.6;
