--- a/scss/plugins/_plugins.scss
+++ b/scss/plugins/_plugins.scss
@@ -1,3 +1,5 @@
+
+@use 'core/file-explorer';
 @use 'core/file-explorer-bullet';
 @use 'core/file-explorer-hover';
 @use 'core/file-explorer-rainbow';
