--- a/scss/foundations/colors/_dynamic_palette.scss
+++ b/scss/foundations/colors/_dynamic_palette.scss
@@ -21,12 +21,14 @@
     .is-mobile.theme-#{$tone}.fas-custom-#{$tone},
     .theme-#{$tone}.fas-custom-#{$tone} {
         @if $tone == "light" {
-            --custom-color-base-00: #ffffff;
-            --custom-color-base-100: #222222;
+            --custom-color-base-00: #ebebeb;
+            --custom-color-base-100: #000000;
+            --custom-color-space: srgb-linear;
         }
         @else {
-            --custom-color-base-00: #1e1e1e;
-            --custom-color-base-100: #dadada;
+            --custom-color-base-00: #1f1f1f;
+            --custom-color-base-100: #d9d9d9;
+            --custom-color-space: lab;
         }
 
         @each $color in map-keys(map-get($extended-colors, $tone)) {
