--- a/css/editor/callouts/callout-fas-infobox.css
+++ b/css/editor/callouts/callout-fas-infobox.css
@@ -73,9 +73,10 @@ body {
 }
 .callout[data-callout=fas-infobox] .image-embed[alt~=icon] {
   display: block;
+  position: relative;
   height: var(--infobox-icon-size, 70px);
   width: var(--infobox-icon-size, 70px);
-  margin-top: calc(-1 * var(--infobox-icon-size, 70px));
+  margin-top: calc(-0.5 * var(--infobox-icon-size, 70px));
   margin-left: 10px;
 }
 .callout[data-callout=fas-infobox] .image-embed[alt~=icon] img {
@@ -88,15 +89,16 @@ body {
 }
 .callout[data-callout=fas-infobox] img[alt*=icon]:not(.image-embed img) {
   display: block;
+  position: relative;
   height: 70px;
   width: 70px;
   border: 2px solid rgb(var(--callout-color));
-  margin-top: calc(-1 * var(--infobox-icon-size, 70px));
+  margin-top: calc(-0.5 * var(--infobox-icon-size, 70px));
   margin-left: 10px;
   object-fit: cover;
   border-radius: 20%;
 }
-.callout[data-callout=fas-infobox] p:has(.image-embed[alt~=icon]) + :is(h1, h2, h3, h4, h5, h6) {
+.callout[data-callout=fas-infobox] p:has(img[alt~=icon]) + :is(h1, h2, h3, h4, h5, h6, p) {
   margin-top: 0;
 }
 .callout[data-callout=fas-infobox] .image-embed[alt~=background] {
